--- a/apply at uni.html
+++ b/apply at uni.html
@@ -178,7 +178,7 @@
         </div>
     </div>
 
-    <footer>&copy; 2025 Campus Collective. All rights reserved.</footer>
+    <footer>&copy; 2025 Campus Collective. All rights reserved | Developed with 🧡 in SA.</footer>
 
     <script>
         const hb = document.getElementById('hamburger'), menu = document.getElementById('navLinks'), cb = document.getElementById('closeBtn');
