--- a/campus shop.html
+++ b/campus shop.html
@@ -102,7 +102,7 @@
                 <p><strong>Email:</strong> <a href="mailto:info@mycampuscollective.me">info@mycampuscollective.me</a></p>
             </div>
         </div>
-        <div class="footer-bottom">&copy; 2025 Campus Collective. All Rights Reserved.</div>
+        <div class="footer-bottom">&copy; 2025 Campus Collective. All rights reserved | Developed with 🧡 in SA.</div>
     </footer>
 
     <script>
