--- a/customer-login.html
+++ b/customer-login.html
@@ -45,11 +45,11 @@
 
         <form id="loginForm" class="space-y-6">
             <div>
-                <label class="block text-sm font-semibold text-gray-700 mb-2">Student Email</label>
-                <input type="email" id="email" required class="w-full px-4 py-3 rounded-xl border border-gray-200 focus:ring-2 focus:ring-blue-500 outline-none transition-all" placeholder="yourname@student.com">
+                <label class="block text-sm font-semibold text-gray-700 mb-2">Email:</label>
+                <input type="email" id="email" required class="w-full px-4 py-3 rounded-xl border border-gray-200 focus:ring-2 focus:ring-blue-500 outline-none transition-all" placeholder="yourname@email.com">
             </div>
             <div>
-                <label class="block text-sm font-semibold text-gray-700 mb-2">Password</label>
+                <label class="block text-sm font-semibold text-gray-700 mb-2">Password:</label>
                 <input type="password" id="password" required class="w-full px-4 py-3 rounded-xl border border-gray-200 focus:ring-2 focus:ring-blue-500 outline-none transition-all" placeholder="••••••••">
             </div>
             <button type="submit" class="w-full bg-blue-600 text-white py-3 rounded-xl font-bold hover:bg-blue-700 transform hover:scale-[1.02] transition-all shadow-lg">
