--- a/management.html
+++ b/management.html
@@ -145,9 +145,9 @@
                     <th>Agent</th>
                     <th>Date Applied</th>
                     <th class="p-3">Move-in Date</th>
-                     <th class="p-3">Agent</th>
-                     <th>Status</th>
+                     <th class="p-3">Status</th>
                      <th>Control</th>
+                    
                     </tr>
                 </thead> 
                 <tbody id="recruit-table-body"></tbody>
