--- a/Agent profil.html
+++ b/Agent profil.html
@@ -122,10 +122,20 @@
         <input type="tel" id="studentPhone" name="studentPhone" placeholder="Phone (e.g. 012 345 6789)" required class="w-full p-4 border rounded-2xl bg-gray-50">
         
         <select name="accommodation" id="acc-select" required class="w-full p-4 border rounded-2xl bg-gray-50" onchange="checkOther(this)">
-            <option value="" disabled selected>Select Accommodation</option>
-            <option value="Vuyani Student Accomodation">Vuyani Student Accomodation</option>
-            <option value="Embizeni Student Accomodation (Matt)">Embizeni Student Accomodation (Matt)</option>
-            <option value="not listed">Other (Not Listed)</option>
+            <option value="" disabled selected>Select from listed properties...</option>
+                <option value="Vuyani Student Accomodation">Vuyani Student Accomodation</option>
+                <option value="Embizeni Student Accomodation (Matt)">Embizeni Student Accomodation (Matt)</option>
+                <option value="Embizeni Student Accomodation (likazi 1)">Embizeni Student Accomodation (likazi 1)</option>
+                <option value="Embizeni Student Accomodation (likaz 2)">Embizeni Student Accomodation (likaz 2)</option>
+                <option value="Embizeni Student Accomodation (Entokozweni)">Embizeni Student Accomodation (Entokozweni)</option>
+                <option value="View Inn Student accommodation">View Inn Student accommodation</option>
+                <option value="Mashimula Student Accommodation (Likazi)">Mashimula Student Accommodation (Likazi)</option>
+                <option value="Mashimula Student Accommodation (Entokozweni)">Mashimula Student Accommodation (Entokozweni)</option>
+                <option value="Cecil Complex">Cecil Complex</option>
+                <option value="Boniville Student Acc">Boniville Student Acc</option>
+                <option value="Paballo Student Acc">Paballo Student Acc</option>
+                <option value="EGP-holdings">EGP-holdings</option>
+                <option value="not listed">Other (Not Listed Above)</option>
         </select>
         <input type="text" id="manual-acc" name="manualAccommodation" placeholder="Enter Name" class="w-full p-4 border border-blue-400 rounded-2xl hidden mt-2">
 
