--- a/management.html
+++ b/management.html
@@ -66,10 +66,13 @@
             <h1 class="text-2xl font-black text-gray-800 uppercase tracking-tight">Management Command Center</h1>
         </div>
         <div class="flex gap-4">
-            <button onclick="triggerLoader('Syncing Data...', 1200).then(()=>location.reload())" class="bg-gray-100 text-gray-700 px-4 py-2 rounded-lg font-bold border hover:bg-gray-200 transition">🔄 Refresh</button>
-            <button onclick="openCalculator()" class="bg-blue-100 text-blue-700 px-4 py-2 rounded-lg font-bold border border-blue-300 hover:bg-blue-200 transition">➕ Commission Calcs</button>
-            <button onclick="logout()" class="bg-red-600 text-white px-6 py-2 rounded-lg font-bold hover:bg-red-700 transition">Secure Logout</button>
-        </div>
+    <button onclick="triggerLoader('Syncing Data...', 1200).then(()=>location.reload())" class="bg-gray-100 text-gray-700 px-4 py-2 rounded-lg font-bold border hover:bg-gray-200 transition">🔄 Refresh</button>
+    
+    <button onclick="window.location.href='water-management.html'" class="bg-cyan-100 text-cyan-700 px-4 py-2 rounded-lg font-bold border border-cyan-300 hover:bg-cyan-200 transition">💧 Water Supply</button>
+    
+    <button onclick="openCalculator()" class="bg-blue-100 text-blue-700 px-4 py-2 rounded-lg font-bold border border-blue-300 hover:bg-blue-200 transition">➕ Commission Calcs</button>
+    <button onclick="logout()" class="bg-red-600 text-white px-6 py-2 rounded-lg font-bold hover:bg-red-700 transition">Secure Logout</button>
+</div>
     </div>
 
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 mb-10">
